@@ -1,4 +1,4 @@
-# Copyright (C) 2004 g10 Code GmbH
+# Copyright (C) 2004, 2007 g10 Code GmbH
 #
 # This file is part of Poldi.
 #
@@ -17,4 +17,6 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 # 02111-1307, USA
 
-SUBDIRS = jnlib libscd common ctrl pam
+SUBDIRS = jnlib common scd scd-support ctrl pam
+
+EXTRA_DIST = README
