@@ -1,3 +1,12 @@
+2007-06-29  Moritz  <moritz@g10code.com>
+
+	* libscd: Directory removed.
+	* scd: New directory.
+	* scd-support: Likewise.
+	* README: New file.
+	* Makefile.am (SUBDIRS): Adjusted to new directory tree.
+	(EXTRA_DIST): README.
+
 2005-10-08  Moritz Schulte  <moritz@g10code.com>
 
 	* Makefile.am: Remove install-pam-module target.
